# aoc-2021

./: README.md  aoc.cabal
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs
src/Day01/: Day01.hs
src/Day02/: Day02.hs
src/Day03/: Day03.hs
