cabal-version:       3.0
name:                aoc
version:             0.1.0.0
author:              Rafal Gwozdzinski
maintainer:          rafal.gwozdzinski@gmail.com
  
library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  exposed-modules:     Day01, Day02, Day03
  build-depends:       base
                     , containers
                     , matrix
                     , split